--- a/src/components/form-control/core/shared-dialog/multi-select/multi-select-dialog.html
+++ b/src/components/form-control/core/shared-dialog/multi-select/multi-select-dialog.html
@@ -7,13 +7,12 @@
                 <div class="col-md-6">
                     <mat-form-field appearance="outline" class="asw-mat-form-field">
                         <mat-label>Unique Id</mat-label>
-                        <input matInput type="text"
-                                        name="id"
-                                        placeholder="Enter Unique Id"
-                                        matTooltip="Enter Unique Id"
-                                        formControlName="id" required>
-                        <mat-error class="asw-mat-error" *ngFor="let validation of constants.accountValidationMessages.id">
-                            <ng-container class="asw-mat-error" *ngIf="aswEditMultiselectForm.get('id')?.hasError(validation.type) && (aswEditMultiselectForm.get('id')?.dirty || aswEditMultiselectForm.get('id')?.touched)">
+                        <input matInput type="text" name="id" placeholder="Enter Unique Id" matTooltip="Enter Unique Id"
+                            formControlName="id" required>
+                        <mat-error class="asw-mat-error"
+                            *ngFor="let validation of constants.accountValidationMessages.id">
+                            <ng-container class="asw-mat-error"
+                                *ngIf="aswEditMultiselectForm.get('id')?.hasError(validation.type) && (aswEditMultiselectForm.get('id')?.dirty || aswEditMultiselectForm.get('id')?.touched)">
                                 {{validation.message}}
                             </ng-container>
                         </mat-error>
@@ -22,12 +21,12 @@
                 <div class="col-md-6">
                     <mat-form-field appearance="outline" class="asw-mat-form-field">
                         <mat-label>Label</mat-label>
-                        <input matInput type="text"
-                                        placeholder="Enter label"
-                                        matTooltip="Enter label"
-                                        formControlName="label" required>
-                        <mat-error class="asw-mat-error" *ngFor="let validation of constants.accountValidationMessages.label">
-                            <ng-container class="asw-mat-error" *ngIf="aswEditMultiselectForm.get('label')?.hasError(validation.type) && (aswEditMultiselectForm.get('label')?.dirty || aswEditMultiselectForm.get('label')?.touched)">
+                        <input matInput type="text" placeholder="Enter label" matTooltip="Enter label"
+                            formControlName="label" required>
+                        <mat-error class="asw-mat-error"
+                            *ngFor="let validation of constants.accountValidationMessages.label">
+                            <ng-container class="asw-mat-error"
+                                *ngIf="aswEditMultiselectForm.get('label')?.hasError(validation.type) && (aswEditMultiselectForm.get('label')?.dirty || aswEditMultiselectForm.get('label')?.touched)">
                                 {{validation.message}}
                             </ng-container>
                         </mat-error>
@@ -38,20 +37,15 @@
                 <div class="col-md-6">
                     <mat-form-field appearance="outline" class="asw-mat-form-field">
                         <mat-label>Custom CSS Class</mat-label>
-                        <input matInput type="text"
-                                        name="customClass"
-                                        placeholder="Custom CSS Class"
-                                        matTooltip="Custom CSS Class"
-                                        formControlName="customClass">
+                        <input matInput type="text" name="customClass" placeholder="Custom CSS Class"
+                            matTooltip="Custom CSS Class" formControlName="customClass">
                     </mat-form-field>
                 </div>
                 <div class="col-md-6">
                     <mat-form-field appearance="outline" class="asw-mat-form-field">
                         <mat-label>Tooltip</mat-label>
-                        <input matInput type="text"
-                                        placeholder="Enter tooltip"
-                                        matTooltip="Enter tooltip"
-                                        formControlName="tooltip">
+                        <input matInput type="text" placeholder="Enter tooltip" matTooltip="Enter tooltip"
+                            formControlName="tooltip">
                     </mat-form-field>
                 </div>
             </div>
@@ -71,112 +65,89 @@
                         <mat-label>Textbox Style</mat-label>
                         <mat-select formControlName="style" matTooltip="Select textbox style">
                             <mat-option value="fill">Fill</mat-option>
-                            <mat-option value="outline">Outline</mat-option>                    
+                            <mat-option value="outline">Outline</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
             </div>
             <ng-container formArrayName="options">
-                <div class="row" 
-                    *ngFor="let option of options.controls; let index = index; let last=last;" 
+                <div class="row" *ngFor="let option of options.controls; let index = index; let last=last;"
                     [formGroupName]="index">
                     <div class="col-md-1 mt-3">
-                        <mat-checkbox 
-                        formControlName="isChecked"></mat-checkbox>
+                        <mat-checkbox formControlName="isChecked"></mat-checkbox>
                     </div>
                     <div class="col-md-4">
                         <mat-form-field appearance="outline" class="asw-mat-form-field">
                             <mat-label>Option key {{index+1}}</mat-label>
-                            <input matInput type="text"
-                                    placeholder="Option key"
-                                    formControlName="key"
-                                    matTooltip="Option key"
-                                    minlength="1"
-                                    maxlength="50"
-                                    (keyup)="onKey($event, index)"
-                                    pattern="^[a-z0-9_-]{1,50}$"
-                                    required>
-                                <mat-error class="asw-mat-error" *ngFor="let validation of constants.accountValidationMessages.key">
-                                    <ng-container class="asw-mat-error" *ngIf="options.controls[index].get('key')?.hasError(validation.type) && options.controls[index].get('key')?.errors?.unique && (options.controls[index].get('key')?.dirty || options.controls[index].get('key')?.touched)">
-                                        {{validation.message}}
-                                    </ng-container>
-                                </mat-error>
+                            <input matInput type="text" placeholder="Option key" formControlName="key"
+                                matTooltip="Option key" minlength="1" maxlength="50" (keyup)="onKey($event, index)"
+                                pattern="^[a-z0-9_\-]{1,50}$" required>
+                            <mat-error class="asw-mat-error"
+                                *ngFor="let validation of constants.accountValidationMessages.key">
+                                <ng-container class="asw-mat-error"
+                                    *ngIf="options.controls[index].get('key')?.hasError(validation.type) && options.controls[index].get('key')?.errors?.unique && (options.controls[index].get('key')?.dirty || options.controls[index].get('key')?.touched)">
+                                    {{validation.message}}
+                                </ng-container>
+                            </mat-error>
                         </mat-form-field>
                     </div>
                     <div class="col-md-5">
                         <mat-form-field appearance="outline" class="asw-mat-form-field">
                             <mat-label>Option value {{index+1}}</mat-label>
-                            <input matInput type="text"
-                                    placeholder="Option value"
-                                    formControlName="value"
-                                    matTooltip="Option value"
-                                    minlength="1"
-                                    maxlength="999"
-                                    required>
-                                <mat-error class="asw-mat-error" *ngFor="let validation of constants.accountValidationMessages.value">
-                                    <ng-container class="asw-mat-error" *ngIf="options.controls[index].get('value')?.hasError(validation.type) && (options.controls[index].get('value')?.dirty || options.controls[index].get('value')?.touched)">
-                                        {{validation.message}}
-                                    </ng-container>
-                                </mat-error>
+                            <input matInput type="text" placeholder="Option value" formControlName="value"
+                                matTooltip="Option value" minlength="1" maxlength="999" required>
+                            <mat-error class="asw-mat-error"
+                                *ngFor="let validation of constants.accountValidationMessages.value">
+                                <ng-container class="asw-mat-error"
+                                    *ngIf="options.controls[index].get('value')?.hasError(validation.type) && (options.controls[index].get('value')?.dirty || options.controls[index].get('value')?.touched)">
+                                    {{validation.message}}
+                                </ng-container>
+                            </mat-error>
                         </mat-form-field>
                     </div>
                     <div class="col-md-2">
-                        <button mat-icon-button *ngIf="last"
-                                type="button" 
-                                matTooltip="Add" 
-                                [matTooltipPosition]="'below'"
-                                (click)="addNewOption()">
+                        <button mat-icon-button *ngIf="last" type="button" matTooltip="Add"
+                            [matTooltipPosition]="'below'" (click)="addNewOption()">
                             <mat-icon>add</mat-icon>
                         </button>
-                        <button mat-icon-button *ngIf="index != 0"
-                                type="button" 
-                                matTooltip="Delete" 
-                                [matTooltipPosition]="'below'" 
-                                (click)="removeOption(index)">
+                        <button mat-icon-button *ngIf="index != 0" type="button" matTooltip="Delete"
+                            [matTooltipPosition]="'below'" (click)="removeOption(index)">
                             <mat-icon>delete</mat-icon>
                         </button>
                     </div>
-                </div> 
-            </ng-container>            
+                </div>
+            </ng-container>
             <div class="row">
                 <div class="col-md-4">
-                    <mat-slide-toggle color="primary"
-                            #isActive
-                            formControlName="isRequired"
-                            (change)="onStatusChange($event)">
-                            <ng-container *ngIf="status; else not">
-                                NotRequired
-                            </ng-container>
-                            <ng-template #not>
-                                Required
-                            </ng-template>
+                    <mat-slide-toggle color="primary" #isActive formControlName="isRequired"
+                        (change)="onStatusChange($event)">
+                        <ng-container *ngIf="status; else not">
+                            NotRequired
+                        </ng-container>
+                        <ng-template #not>
+                            Required
+                        </ng-template>
                     </mat-slide-toggle>
                 </div>
                 <div class="col-md-4">
-                    <mat-slide-toggle color="primary"
-                            #isDisable
-                            formControlName="isDisabled"
-                            (change)="onChange($event)">
-                            <ng-container *ngIf="disabled; else enabled">
-                                Enabled
-                            </ng-container>
-                            <ng-template #enabled>
-                                Disabled
-                            </ng-template>
+                    <mat-slide-toggle color="primary" #isDisable formControlName="isDisabled"
+                        (change)="onChange($event)">
+                        <ng-container *ngIf="disabled; else enabled">
+                            Enabled
+                        </ng-container>
+                        <ng-template #enabled>
+                            Disabled
+                        </ng-template>
                     </mat-slide-toggle>
                 </div>
             </div>
         </div>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-        <button type="button"
-                class="btn btn-danger mr-2 me-2 mb-1"
-                (click)="onNoClick()">
+        <button type="button" class="btn btn-danger mr-2 me-2 mb-1" (click)="onNoClick()">
             No
         </button>
-        <button type="submit"
-                class="btn btn-primary mb-1"
-                cdkFocusInitial>
+        <button type="submit" class="btn btn-primary mb-1" cdkFocusInitial>
             Yes
         </button>
     </mat-dialog-actions>
